# raw_data_loader

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/config/: env.py  manifest.py
app/controller/: destination.py  extractor.py  loader.py  source.py  transformer.py
app/core/: db.py  gcp.py  schema.py
app/utils/: gcp_metadata.py  gcs_metadata.py  logger.py  metadata.py  schema.py  validation.py
secret/: .env.example  manifest_example.json
tests/unit/controller/: test_extractor.py
tests/unit/utils/: test_schema.py
